# automated-research-report-generation

./: .gitignore  get_lib_versions.py  pyproject.toml  requirements.txt
notebook/: test.ipynb
research_and_analyst/: __init__.py
research_and_analyst/config/: configuration.yaml
research_and_analyst/notebook/: test.ipynb  test01_analysts.ipynb  test02_web_search.ipynb  test03_report.ipynb  test04_finalize_report.ipynb
research_and_analyst/utils/: config_loader.py  model_loader.py
